--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div id="main-container" class="container">
+  <div class="container">
     <section class="main-section">
       <h1>Jayanti Singh</h1>
       <div align="right">
